kubernetes/apps/default/external-services/rsync-server/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name rsync
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sync.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        # - name: authelia
        #   namespace: default
      services:
        - name: *name
          port: 873
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
